chore: remove static.go and little update v0.1.0 release notes

--- a/docs/pages/changelog/v0.1.0.md
+++ b/docs/pages/changelog/v0.1.0.md
@@ -6,6 +6,6 @@ Sparkle now supports [Daily notes](https://help.obsidian.md/Plugins/Daily+notes)
 sparkle stream diary make --since=2023-10-25 --until=2023-10-31
 ```
 
-Use our [Obsidian vault](https://github.com/withsparkle/obsidian-vault) to quick start.
+It will create and link together newly created daily notes.
 
 <p align="right">made with ❤️ for everyone by <a href="https://www.octolab.org/">OctoLab</a></p>
