chore: refactoring daily-notes plugin

--- a/docs/pages/changelog/v0.1.0.md
+++ b/docs/pages/changelog/v0.1.0.md
@@ -3,9 +3,13 @@
 Sparkle now supports [Daily notes](https://help.obsidian.md/Plugins/Daily+notes) plugin! ✨
 
 ```bash
-sparkle stream diary make --since=2023-10-25 --until=2023-10-31
+sparklectl stream diary make --since=2023-10-25 --until=2023-10-31
 ```
 
-It will create and link together newly created daily notes.
+```bash
+sparklectl stream diary make --until=2023-10-31 --rewrite
+```
+
+It will create daily notes and link them together.
 
 <p align="right">made with ❤️ for everyone by <a href="https://www.octolab.org/">OctoLab</a></p>
