--- a/docs/pages/changelog/v0.2.4.md
+++ b/docs/pages/changelog/v0.2.4.md
@@ -1,6 +1,6 @@
 # Release notes, v0.2.4
 
-Simple logbook calculator was improved! ✨
+The simple logbook calculator was improved! ✨
 
 ```bash
 find "1. Stream/Diary" -type f -name "*.md" | sort | while read -r file; do
