--- a/docs/pages/changelog/v0.3.1.md
+++ b/docs/pages/changelog/v0.3.1.md
@@ -1,6 +1,6 @@
 # Release notes, v0.3.1
 
-Sparkle is now publishing to [GitHub Packages](https://github.com/features/packages)! ✨
+Sparkle is now publishing to [GitHub Packages](https://github.com/withsparkle/service/pkgs/container/service)! ✨
 
 ```bash
 docker pull ghcr.io/withsparkle/service:latest
